@@ -84,10 +84,18 @@ class Station(object):
                                                 formatter=formatter,
                                                 converter=converter)
         self.rain_year_str = time.strftime("%b", (0, self.rain_year_start, 1, 0,0,0,0,0,-1))
-        self.uptime = weeutil.weeutil.secs_to_string(time.time() - weewx.launchtime_ts) if weewx.launchtime_ts else ''
+        
+        if weewx.launchtime_ts:
+            self.uptime = weewx.units.ValueHelper(value_t=(time.time() - weewx.launchtime_ts, 
+                                                           "second", 
+                                                           "group_deltatime"),
+                                                  formatter=formatter,
+                                                  converter=converter)
+        else:
+            self.uptime = ''
         self.version = weewx.__version__
 
-        # Get the uptime. Because this is highly operating system dependent, several
+        # Get the OS uptime. Because this is highly operating system dependent, several
         # different strategies may have to be tried:
         os_uptime_secs = None
         try:
@@ -100,7 +108,11 @@ class Station(object):
             except NameError:
                 pass
         if os_uptime_secs:
-            self.os_uptime = weeutil.weeutil.secs_to_string(int(os_uptime_secs + 0.5))
+            self.os_uptime = weewx.units.ValueHelper(value_t=(os_uptime_secs,
+                                                              "second",
+                                                              "group_deltatime"),
+                                                     formatter=formatter,
+                                                     converter=converter)
 
     def __getattr__(self, name):
         # For anything that is not an explicit attribute of me, try
