@@ -96,7 +96,6 @@
         degree_compass    =   °
         foot              = " feet"
         hPa               = " hPa"
-        hour              = " hrs"
         inHg              = " inHg"
         inch              = " in"
         inch_per_hour     = " in/hr"
@@ -114,9 +113,12 @@
         mmHg              = " mmHg"
         mm_per_hour       = " mm/hr"
         percent           =   %
-        second            = " secs"
         volt              = " V"
         watt_per_meter_squared = " W/m²"
+        day               = " day",    " days"
+        hour              = " hour",   " hours"
+        minute            = " minute", " minutes"
+        second            = " second", " seconds"
         NONE              = ""
         
     [[TimeFormats]]
@@ -131,7 +133,7 @@
         current    = %x %X
         ephem_day  = %X
         ephem_year = %x %X
-
+        
     [[Ordinates]]    
         # The ordinal directions. The last one should be for no wind direction
         directions = N, NNE, NE, ENE, E, ESE, SE, SSE, S, SSW, SW, WSW, W, WNW, NW, NNW, N/A 
