@@ -16,6 +16,9 @@ Enabled multiple rsync instances for a single weewx instance.
  
 More extensive debug information for rscync users.
 
+Added the ability to localize the weewx and server uptime. See the
+Customizing Guide for details.
+
 Added catchup to the WS28xx driver, but still no hardware record generation.
 
 Changed lux-to-W/m^2 conversion factor in the fine offset driver.
